welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:54: error: Boolean does not take parameters
    }else (MurDroite()){
                       ^